# dbfread2

./: .cursorrules  .gitignore  .mise.toml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
acknowledgements/: index.html
api_changes/: index.html
changes/: index.html
dbf_objects/: index.html
dbfread/: field_parser.py
docs/: api_changes.md  changes.md  exporting_data.md  field_types.md  index.md  installing.md  introduction.md  resources.md
examples/: custom_field_type.py  dbf2sqlite  dbfinfo.py  namedtuples.py  pandas_dataframe.py  print_csv.py  print_invalid_values.py  record_objects.py  using_dataset.py
examples/files/: make_example_files.py
exporting_data/: index.html
field_types/: index.html
installing/: index.html
introduction/: index.html
license/: index.html
resources/: index.html
search/: search_index.json
src/dbfread2/: __init__.py  codepages.py  dbf.py  dbversions.py  deprecated_dbf.py  exceptions.py  field_parser.py  ifiles.py  memo.py  struct_parser.py
tests/: test_field_parser.py  test_filepath.py  test_ifiles.py  test_invalid_value.py  test_memo.py  test_read_and_length.py  test_version.py
