[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbfread2"
version = "0.1.0"
authors = [{ name = "Nutchanon Ninyawee", email = "me@nutchanon.org" }]
description = "Read DBF Files with Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/wasdee/dbfread2"
Documentation = "https://dbfread2.readthedocs.io/"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = ["PLR2004", "N802"]

# pyupgrade settings
fix = true # Enable autofix behavior

# [tool.ruff.up]
# # Skip async/await rewrite suggestions
# skip-async = false
# # Keep runtime typing imports
# keep-runtime-typing = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbfread2"]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
]
dev = ["pytest>=8.3.4"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0",
]
